<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.rohr.coletorinterno.rohr.DescargaItens"
>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Dados">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/NomeConferente"
            android:text="@string/Conferente"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/FirstName"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/OS_Placa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Dados">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/PlacaVeiculo"
            android:text="Placa: "
            android:textAllCaps="true"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Placa"
            android:textAllCaps="true"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nroOS"
            android:text="Numero OS: "
            android:layout_marginLeft="50dp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/OS"
            android:textAllCaps="true"
            android:textStyle="bold"/>
    </LinearLayout>




        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:id="@+id/lista_itens"
            android:maxLines="1"
            android:lines="1"
            android:imeOptions="actionNext"
            android:hint="@string/item_para_descarregar"
            android:inputType="textMultiLine"
            android:layout_centerHorizontal="true" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/DadosDescarga"
    android:layout_below="@id/lista_itens"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true">

    <EditText

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/descBom"
        android:inputType="textMultiLine|phone"
        android:imeOptions="actionNext"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:hint="@string/bom" />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/descDanificado"
        android:inputType="textMultiLine|phone"
        android:imeOptions="actionNext"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:hint="@string/danificado"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/descLimpeza"
        android:inputType="textMultiLine|phone"
        android:imeOptions="actionNext"
        android:hint="@string/limpeza"
        android:textAppearance="?android:attr/textAppearanceMedium"
      />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/descInutilizado"
        android:imeOptions="actionDone"
        android:inputType="textMultiLine|phone"
        android:hint="@string/inutilizado"

        android:textAppearance="?android:attr/textAppearanceMedium"
        />

</LinearLayout>

<LinearLayout
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/DadosDescarga"
    android:id="@+id/linearLayout2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_descarregado"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/NomeDescarga" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/qtdeDescarga"
        android:inputType="textMultiLine"
        android:text="0.0"
        android:textAppearance="?android:attr/textAppearanceMedium"

        />



</LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnConfirmaDescarga"
        android:text="@string/descarregar_item"
        android:onClick="incluiItem"
        android:textColor="@color/colorPrimary"
        android:background="@android:color/transparent"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnInsereDescarga"
        android:text="@string/inserir_novo_item"
        android:onClick="incluiItem"
        android:layout_above="@+id/BtnEncerraDescarga"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/BtnEncerraDescarga"
        android:onClick="FinalizarDescarga"
        android:text="@string/Encerra_OS"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
